--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 .wsite-product .wsite-product-price a {}
 }</style>
 <style>
-.wsite-background {background-image: url("/uploads/5/2/4/5/52450837/background-images/1177546391.jpg") !important;background-repeat: no-repeat !important;background-position: 50% 50% !important;background-size: 100% !important;background-color: transparent !important;background: inherit;}
+.wsite-background {background-image: url("/uploads/iphone7plus.jpg") !important;background-repeat: no-repeat !important;background-position: 50% 50% !important;background-size: 100% !important;background-color: transparent !important;background: inherit;}
 body.wsite-background {background-attachment: fixed !important;}.wsite-background.wsite-custom-background{ background-size: cover !important}
 </style>
 		<script><!--
@@ -391,7 +391,7 @@ var STYLE_PREFIX = 'wsite';
 
 		</div>
 
-		
+
 	</div>
 
 	<div class="overlay w-navpane-close"></div>
