--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
 						<header class="major">
 							<h2> Rival Dev's Public Repo</h2>
 						</header>
-						<p>Accumsan orci faucibus id eu lorem semper. Eu ac iaculis ac nunc nisi lorem vulputate lorem neque cubilia ac in adipiscing in curae lobortis tortor primis integer massa adipiscing id nisi accumsan pellentesque commodo blandit enim arcu non at amet id arcu magna. Accumsan orci faucibus id eu lorem semper nunc nisi lorem vulputate lorem neque cubilia.</p>
+						<p>Welcome to Rival Dev's Public cydia repo.</p>
 						<ul class="actions">
-							<li><a href="#" class="button">Add Repo</a></li>
+							<li><a href="cydia://url/https://cydia.saurik.com/api/share#?source=https%3A%2F%2Frival-dev.github.io" class="button">Add Repo</a></li>
 						</ul>
 					</section>
 
