changed contact stuff

--- a/index.html
+++ b/index.html
@@ -81,8 +81,7 @@
 				<!-- Three -->
 					<section id="three">
 						<h2>Get In Touch</h2>
-						<p>Use this form to get in touch with me, it can be used for support or to request a tweak.</p>
-					
+						<p>Use this to get in touch with me, it can be used for support or to request a tweak.</p>
 							<div class="4u$ 12u$(small)">
 								<ul class="labeled-icons">
 									<li>
