--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 						<h2>Recent Work</h2>
 						<div class="row">
 							<article class="6u 12u$(xsmall) work-item">
-								<a href="images/fulls/01.jpg" class="image fit thumb"><img src="images/thumbs/01.jpg" alt="" /></a>
+								<a href="https://google.com" class="image fit thumb"><img src="images/thumbs/01.jpg" alt="" /></a>
 								<h3>Magna sed consequat tempus</h3>
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
 							</article>
@@ -73,12 +73,10 @@
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
 							</article>
 						</div>
-						<ul class="actions">
-							<li><a href="tweaks.html" class="button">Full Portfolio</a></li>
-						</ul>
+
 					</section>
 
-				<!-- Three -->
+				<!-- Contact Section -->
 					<section id="three">
 						<h2>Get In Touch</h2>
 						<p>Use this to get in touch with me, it can be used for support or to request a tweak.</p>
