added more tweak spots

--- a/index.html
+++ b/index.html
@@ -72,6 +72,16 @@
 								<h3>Add Tweak 6</h3>
 								<p>Tweak 6 description</p>
 							</article>
+							<article class="6u 12u$(xsmall) work-item">
+								<a href="images/fulls/01.jpg" class="image fit thumb"><img src="images/thumbs/01.jpg" alt="" /></a>
+								<h3>Add Tweak 1</h3>
+								<p>Tweak 1 description</p>
+							</article>
+							<article class="6u 12u$(xsmall) work-item">
+								<a href="images/fulls/01.jpg" class="image fit thumb"><img src="images/thumbs/01.jpg" alt="" /></a>
+								<h3>Add Tweak 1</h3>
+								<p>Tweak 1 description</p>
+							</article>
 						</div>
 
 					</section>
