added white status bar

--- a/index.html
+++ b/index.html
@@ -40,13 +40,14 @@
 
 				<!-- Two -->
 					<section id="two">
-						<h2>Recent Work</h2>
+						<h2>Tweaks</h2>
 						<div class="row">
 							<article class="6u 12u$(xsmall) work-item">
 								<a href="images/fulls/01.jpg" class="image fit thumb"><img src="images/thumbs/01.jpg" alt="" /></a>
 								<h3>Add Tweak 1</h3>
 								<p>Tweak 1 description</p>
 							</article>
+							<!--
 							<article class="6u$ 12u$(xsmall) work-item">
 								<a href="images/fulls/02.jpg" class="image fit thumb"><img src="images/thumbs/02.jpg" alt="" /></a>
 								<h3>Add Tweak 2</h3>
@@ -74,14 +75,15 @@
 							</article>
 							<article class="6u 12u$(xsmall) work-item">
 								<a href="images/fulls/01.jpg" class="image fit thumb"><img src="images/thumbs/01.jpg" alt="" /></a>
-								<h3>Add Tweak 1</h3>
-								<p>Tweak 1 description</p>
+								<h3>Add Tweak 7</h3>
+								<p>Tweak 7 description</p>
 							</article>
 							<article class="6u 12u$(xsmall) work-item">
 								<a href="images/fulls/01.jpg" class="image fit thumb"><img src="images/thumbs/01.jpg" alt="" /></a>
-								<h3>Add Tweak 1</h3>
-								<p>Tweak 1 description</p>
+								<h3>Add Tweak 8</h3>
+								<p>Tweak 8 description</p>
 							</article>
+							-->
 						</div>
 
 					</section>
