--- a/index.html
+++ b/index.html
@@ -46,6 +46,9 @@
 								<a href="images/fulls/01.jpg" class="image fit thumb"><img src="images/thumbs/01.jpg" alt="" /></a>
 								<h3>Add Tweak 1</h3>
 								<p>Tweak 1 description</p>
+								<ul class="actions">
+									<li><a href="http://cydia.saurik.com/package/com.rival-dev.whitestatusbar" class="button">View Tweak in Cydia</a></li>
+								</ul>
 							</article>
 							<!--
 							<article class="6u$ 12u$(xsmall) work-item">
