--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 								<h3>Add Tweak 1</h3>
 								<p>Tweak 1 description</p>
 								<ul class="actions">
-									<li><a href="https://cydia.saurik.com/package/com.rival-dev.whitestatusbar" class="button">View Tweak in Cydia</a></li>
+									<li><a href="cydia://package/com.rival-dev.whitestatusbar" class="button">View Tweak in Cydia</a></li>
 								</ul>
 							</article>
 							<!--
