--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 			<header id="header">
 				<div class="inner">
 					<a href="#" class="image avatar"><img src="images/Nik's Sketch.png" alt="" /></a>
-					<h1><strong>I am Rival Dev</strong>, a begining dev learing from Antique Dev<br />
+					<h1><strong>I am Rival Dev</strong>, a begining tweak developer learing from Antique Dev<br />
 
 				</div>
 			</header>
@@ -47,7 +47,7 @@
 								<h3>Add Tweak 1</h3>
 								<p>Tweak 1 description</p>
 								<ul class="actions">
-									<li><a href="https://cydia.saurik.com/package/com.rival-dev.whitestatusbar" class="button">View Tweak in Cydia</a></li>
+									<li><a href="tweaks/whitestatusbar.html" class="button">View More</a></li>
 								</ul>
 							</article>
 							<!--
@@ -104,7 +104,7 @@
 									</li>
 									<li>
 										<h3 class="icon fa-envelope-o"><span class="label">Email</span></h3>
-										<a href="#">bike01@rogers.com</a>
+										<a href="#">rivaldeveloper@gmail.com</a>
 									</li>
 								</ul>
 							</div>
@@ -440,7 +440,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 						<li><a href="https://twitter.com/Rival_Dev" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 						<li><a href="https://github.com/Rival-Dev/Rival-Dev.github.io" class="icon fa-github"><span class="label">Github</span></a></li>
 						<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
-						<li><a href="bike01@rogers.com" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
+						<li><a href="rivaldeveloper@gmail.com" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
 					</ul>
 					<ul class="copyright">
 						<li>&copy; Animemind15</li><li>Icon: <a href="http://www.paigeeworld.com/u/animemind15">Paigee World</a></li>
