--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 								<h3>Add Tweak 1</h3>
 								<p>Tweak 1 description</p>
 								<ul class="actions">
-									<li><a href="tweaks/whitestatusbar.html" class="button">View More</a></li>
+									<li><a href="whitestatusbar.html" class="button">View More</a></li>
 								</ul>
 							</article>
 							<!--
