changed second page

--- a/whitestatusbar.html
+++ b/whitestatusbar.html
@@ -30,12 +30,9 @@
 				<!-- One -->
 					<section id="one">
 						<header class="major">
-							<h2> Rival Dev's Public Repo</h2>
+							<h2> White Statusbar</h2>
 						</header>
-						<p>Welcome to Rival Dev's Public cydia repo.</p>
-						<ul class="actions">
-							<li><a href="cydia://url/https://cydia.saurik.com/api/share#?source=https%3A%2F%2Frival-dev.github.io" class="button">Add Repo</a></li>
-						</ul>
+						<p>This tweak does exaclty what the title says. It makes the statusbar white because when using tweaks that change the color of statusbar icons it doesnt always work with a dark background, this tweak will let you use any background you want and still beable to see your colored statusbar icons.</p>
 					</section>
 
 				<!-- Two -->
