added description for homepage

--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
 						<div class="row">
 							<article class="6u 12u$(xsmall) work-item">
 								<a href="images/fulls/01.jpg" class="image fit thumb"><img src="images/thumbs/01.jpg" alt="" /></a>
-								<h3>Add Tweak 1</h3>
-								<p>Tweak 1 description</p>
+								<h3>White status Bar</h3>
+								<p>Makes status bar white on lock screen and home screen</p>
 								<ul class="actions">
 									<li><a href="whitestatusbar.html" class="button">View More</a></li>
 								</ul>
