--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 								<ul class="labeled-icons">
 									<li>
 										<h3 class="icon fa-home"><span class="label">Address</span></h3>
-										Toronto, Ontario, Canada<br />
+										Ontario, Canada<br />
 
 									</li>
 									<li>
