--- a/whitestatusbar.html
+++ b/whitestatusbar.html
@@ -96,7 +96,7 @@
 								<ul class="labeled-icons">
 									<li>
 										<h3 class="icon fa-home"><span class="label">Address</span></h3>
-										Toronto, Ontario, Canada<br />
+										Ontario, Canada<br />
 
 									</li>
 									<li>
