--- a/whitestatusbar.html
+++ b/whitestatusbar.html
@@ -37,7 +37,7 @@
 
 				<!-- Two -->
 					<section id="two">
-						<h2>Tweaks</h2>
+						<h2>Screen Shots</h2>
 						<div class="row">
 							<article class="6u 12u$(xsmall) work-item">
 								<a href="images/fulls/01.jpg" class="image fit thumb"><img src="images/thumbs/01.jpg" alt="" /></a>
