removed tweak description on 1st screen shot and added second screen shot

--- a/whitestatusbar.html
+++ b/whitestatusbar.html
@@ -39,20 +39,34 @@
 					<section id="two">
 						<h2>Screen Shots</h2>
 						<div class="row">
+
 							<article class="6u 12u$(xsmall) work-item">
 								<a href="images/fulls/01.jpg" class="image fit thumb"><img src="images/thumbs/01.jpg" alt="" /></a>
-								<h3>Add Tweak 1</h3>
-								<p>Tweak 1 description</p>
+								<h3>Lock Screen Without</h3>
 								<ul class="actions">
 									<li><a href="tweaks/whitestatusbar.html" class="button">View More</a></li>
 								</ul>
 							</article>
-							<!--
+
+              <article class="6u 12u$(xsmall) work-item">
+                <a href="images/fulls/01.jpg" class="image fit thumb"><img src="images/thumbs/01.jpg" alt="" /></a>
+                <h3>Lock Screen With</h3>
+                <ul class="actions">
+                  <li><a href="tweaks/whitestatusbar.html" class="button">View More</a></li>
+                </ul>
+              </article>
+
 							<article class="6u$ 12u$(xsmall) work-item">
 								<a href="images/fulls/02.jpg" class="image fit thumb"><img src="images/thumbs/02.jpg" alt="" /></a>
-								<h3>Add Tweak 2</h3>
-								<p>Tweak 2 description</p>
+								<h3>Home Screen Without</h3>
 							</article>
+
+              <article class="6u$ 12u$(xsmall) work-item">
+								<a href="images/fulls/02.jpg" class="image fit thumb"><img src="images/thumbs/02.jpg" alt="" /></a>
+								<h3>Home Screen With</h3>
+							</article>
+              
+              <!--
 							<article class="6u 12u$(xsmall) work-item">
 								<a href="images/fulls/03.jpg" class="image fit thumb"><img src="images/thumbs/03.jpg" alt="" /></a>
 								<h3>Add Tweak 3</h3>
@@ -101,7 +115,7 @@
 									</li>
 									<li>
 										<h3 class="icon fa-envelope-o"><span class="label">Email</span></h3>
-										<a href="#">rivaldeveloper@gmail.com</a>
+										<a href="#"> rivaldeveloper@gmail.com </a>
 									</li>
 								</ul>
 							</div>
