--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 			<header id="header">
 				<div class="inner">
 					<a href="#" class="image avatar"><img src="images/Nik's Sketch.png" alt="" /></a>
-					<h1><strong>I am Rival Dev</strong>, a begining tweak developer learing from Antique Dev<br />
+					<h1><strong>I am Rival Dev</strong>, a tweak developer learing from Antique Dev<br />
 
 				</div>
 			</header>
