--- a/whitestatusbar.html
+++ b/whitestatusbar.html
@@ -43,7 +43,7 @@
 							<article class="6u 12u$(xsmall) work-item">
 								<a href="images/fulls/01.jpg" class="image fit thumb"><img src="images/thumbs/01.jpg" alt="" /></a>
 								<h3>Lock Screen Without</h3>
-								
+
 							</article>
 
               <article class="6u 12u$(xsmall) work-item">
@@ -52,12 +52,12 @@
 
               </article>
 
-							<article class="6u$ 12u$(xsmall) work-item">
+							<article class="6u 12u$(xsmall) work-item">
 								<a href="images/fulls/02.jpg" class="image fit thumb"><img src="images/thumbs/02.jpg" alt="" /></a>
 								<h3>Home Screen Without</h3>
 							</article>
 
-              <article class="6u$ 12u$(xsmall) work-item">
+              <article class="6u 12u$(xsmall) work-item">
 								<a href="images/fulls/02.jpg" class="image fit thumb"><img src="images/thumbs/02.jpg" alt="" /></a>
 								<h3>Home Screen With</h3>
 							</article>
