--- a/colormebars.html
+++ b/colormebars.html
@@ -30,9 +30,9 @@
 				<!-- One -->
 					<section id="one">
 						<header class="major">
-							<h2> White Statusbar</h2>
+							<h2> Color Me Bars</h2>
 						</header>
-						<p>This tweak does exaclty what the title says. It makes the statusbar white because when using tweaks that change the color of statusbar icons it doesnt always work with a dark background, this tweak will let you use any background you want and still beable to see your colored statusbar icons.</p>
+						<p>This tweak does exaclty what the title says. It lets you change the color of the statusbar to what ever color you want because when using tweaks that change the color of statusbar icons it doesnt always work with a dark background, this tweak will let you use any background you want and still be able to see your colored statusbar icons.</p>
 					</section>
 
 				<!-- Two -->
@@ -40,27 +40,23 @@
 						<h2>Screen Shots</h2>
 						<div class="row">
 
-							<article class="6u 12u$(xsmall) work-item">
-								<a href="images/fulls/01.jpg" class="image fit thumb"><img src="images/thumbs/01.jpg" alt="" /></a>
-								<h3>Lock Screen Without</h3>
-
-							</article>
 
               <article class="6u 12u$(xsmall) work-item">
-                <a href="images/fulls/01.jpg" class="image fit thumb"><img src="images/thumbs/01.jpg" alt="" /></a>
-                <h3>Lock Screen With</h3>
+                <a href="images/fulls/colormebars/lock.PNG" class="image fit thumb"><img src="images/thumbs/lock.png" alt="" /></a>
+                <h3>Lock Screen</h3>
 
               </article>
 
-							<article class="6u 12u$(xsmall) work-item">
-								<a href="images/fulls/02.jpg" class="image fit thumb"><img src="images/thumbs/02.jpg" alt="" /></a>
-								<h3>Home Screen Without</h3>
+              <article class="6u 12u$(xsmall) work-item">
+								<a href="images/fulls/colormebars/home.PNG" class="image fit thumb"><img src="images/thumbs/home.png" alt="" /></a>
+								<h3>Home Screen</h3>
 							</article>
 
-              <article class="6u 12u$(xsmall) work-item">
-								<a href="images/fulls/02.jpg" class="image fit thumb"><img src="images/thumbs/02.jpg" alt="" /></a>
-								<h3>Home Screen With</h3>
+							<article class="6u 12u$(xsmall) work-item">
+								<a href="images/fulls/colormebars/settings.PNG" class="image fit thumb"><img src="images/thumbs/settings.png" alt="" /></a>
+								<h3>Settings</h3>
 							</article>
+
 
               <!--
 							<article class="6u 12u$(xsmall) work-item">
