--- a/index.html
+++ b/index.html
@@ -44,11 +44,11 @@
 						<div class="row">
 							<article class="6u 12u$(xsmall) work-item">
 								<a href="images/fulls/01.jpg" class="image fit thumb"><img src="images/thumbs/01.jpg" alt="" /></a>
-								<h3>White status Bar</h3>
-								<p>Makes status bar white on lock screen and home screen</p>
+								<h3>Color Me bars</h3>
+								<p>Change Color Of Status Bar</p>
 								<ul class="actions">
-									<li><a href="whitestatusbar.html" class="button">View More</a></li>
-									
+									<li><a href="colormebars.html" class="button">View More</a></li>
+
 								</ul>
 							</article>
 							<!--
