--- a/index.html
+++ b/index.html
@@ -99,9 +99,9 @@
 								<h3>Yaul 102</h3>
 								<p>Download yalu on device</p>
 								<ul class="actions">
-									<li><a href="Yalu102.html" class="button">View More/a></li>
-
-								</ul>
+									<li><a href="yalu102/index.html" class="button">View More/a></li>
+									</ul>
+									
 							</article>
 
 						</div>
