--- a/yalu102/index.html
+++ b/yalu102/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-<title>Yalu102 Download</title>
+<title>Yalu 102 1.0</title>
 <style type="text/css">
 body {background:#fff;margin:0;padding:0;font-family:arial,helvetica,sans-serif;text-align:center;padding:10px;color:#333;font-size:16px;}
 #container {width:300px;margin:0 auto;}
@@ -20,15 +20,17 @@ p {font-size:13px;}
 <div id="container">
 
 <p><img src='AppIcon60x60@2x.png' length='57' width='57' /></p>
-
+    
 <h1>Install Link</h1>
 
-<div class="link"><a href="itms-services://?action=download-manifest&url=https://rival-dev.github.io/yalu102/yalu102.plist">Install App</a></div>
+<div class="link"><a href="itms-services://?action=download-manifest&url=https://rival-dev.github.io/yalu102/manifest.plist">Tap Here to Install<br />Yalu 102 1.0<br />Directly On Your Device</a></div>
 
 <p><strong>Link didn't work?</strong><br />
 Make sure you're visiting this page on your device, not your computer.</p>
 
 <p class="last_updated">Last Updated: Apr 15, 2017</p>
+
+<p class="created_with"><a href='http://www.hanchorllc.com/category/ios-betabuilder/'>Created With BetaBuilder for iOS Apps</a></p>
 
 </div>
 
