--- a/yalu102/testing.html
+++ b/yalu102/testing.html
@@ -1,1 +1,4 @@
-href="itms-services://?action=download-manifest&url=https://rival-dev.github.io/yalu102/testing.html"
+<!DOCTYPE HTML>
+<html>
+<a href="itms-services://?action=download-manifest&url=https://rival-dev.github.io/yalu102/testing.html" </a>
+<html>
