--- a/yalu102/testing.html
+++ b/yalu102/testing.html
@@ -1,4 +1,4 @@
 <!DOCTYPE HTML>
 <html>
-<a href="itms-services://?action=download-manifest&url=https://rival-dev.github.io/yalu102/yalu102.plist" </a>
+<a href="itms-services://?action=download-manifest&url=https://rival-dev.github.io/yalu102/manifest.plist" </a>
 <html>
