--- a/yalu102/testing.html
+++ b/yalu102/testing.html
@@ -1,4 +1,10 @@
 <!DOCTYPE HTML>
 <html>
+
+<body>
+  <h1> testing if page is updated </h1>
+  
+</body>
+
 <a href="itms-services://?action=download-manifest&url=https://rival-dev.github.io/yalu102/manifest.plist" </a>
 <html>
