--- a/yalu102/testing.html
+++ b/yalu102/testing.html
@@ -2,8 +2,8 @@
 <html>
 
 <body>
-  <h1> testing if page is updated </h1>
-  
+  <h1> testing if page is updated: try #1</h1>
+
 </body>
 
 <a href="itms-services://?action=download-manifest&url=https://rival-dev.github.io/yalu102/manifest.plist" </a>
