--- a/yalu102/index.html
+++ b/yalu102/index.html
@@ -23,14 +23,12 @@ p {font-size:13px;}
 
 <h1>Install Link</h1>
 
-<div class="link"><a href="itms-services://?action=download-manifest&url=https://rival-dev.github.io/yalu102/yalu102.plist">Tap Here to Install<br />Yalu 102 1.0<br />Directly On Your Device</a></div>
+<div class="link"><a href="itms-services://?action=download-manifest&url=https://rival-dev.github.io/yalu102/manifest.plist">Tap Here to Install<br />Yalu 102<br/></a></div>
 
 <p><strong>Link didn't work?</strong><br />
 Make sure you're visiting this page on your device, not your computer.</p>
 
 <p class="last_updated">Last Updated: Apr 15, 2017</p>
-
-
 
 </div>
 
