--- a/yalu102/index.html
+++ b/yalu102/index.html
@@ -21,14 +21,14 @@ p {font-size:13px;}
 
 <p><img src='AppIcon60x60@2x.png' length='57' width='57' /></p>
 
-<h1>Install Link</h1>
+<h1>Install Link #1</h1>
 
 <div class="link"><a href="itms-services://?action=download-manifest&url=https://raw.githubusercontent.com/Rival-Dev/rival-dev.github.io/master/yalu102/manifest.plist">Tap Here to Install<br />Yalu 102<br/></a></div>
 
 <p><strong>Link didn't work?</strong><br />
 Make sure you're visiting this page on your device, not your computer.</p>
 
-<p class="last_updated">Last Updated: Apr 15, 2017</p>
+<p class="last_updated">Last Updated: Apr 16, 2017</p>
 
 </div>
 
