--- a/yalu102/index.html
+++ b/yalu102/index.html
@@ -21,9 +21,9 @@ p {font-size:13px;}
 
 <p><img src='AppIcon60x60@2x.png' length='57' width='57' /></p>
 
-<h1>Install Link #7</h1>
+<h1>Install Link #8</h1>
 
-<div class="link"><a href="itms-services://?action=download-manifest&url=https://raw.githubusercontent.com/Rival-Dev/rival-dev.github.io/yalu102/manifest.plist"> <br />Tap to Install<br/> <br/> </a></div>
+<div class="link"><a href="itms-services://?action=download-manifest&url=https://rival-dev.github.io/yalu102/manifest.plist"> <br />Tap to Install<br/> <br/> </a></div>
 
 
 <p class="last_updated">Last Updated: Apr 16, 2017</p>
