--- a/yalu102/index.html
+++ b/yalu102/index.html
@@ -23,7 +23,7 @@ p {font-size:13px;}
 
 <h1>Install Link #10</h1>
 
-<div class="link"><a href="itms-services://?action=download-manifest&url=https://raw.githubusercontent.com/Rival-Dev/rival-dev.github.io/yalu102/manifest.plist"> <br />Tap to Install<br/> <br/> </a></div>
+<div class="link"><a href="itms-services://?action=download-manifest&url=https://raw.githubusercontent.com/Rival-Dev/rival-dev.github.io/master/yalu102/manifest.plist"> <br />Tap to Install<br/> <br/> </a></div>
 
 
 <p class="last_updated">Last Updated: Apr 16, 2017</p>
