Added images for mach_portal and hopefully fixed install

--- a/index.html
+++ b/index.html
@@ -95,13 +95,13 @@
 						<h2>Apps</h2>
 						<div class="row">
 							<article class="6u 12u$(xsmall) work-item">
-								<a href="images/fulls/01.jpg" class="image fit thumb"><img src="images/thumbs/01.jpg" alt="" /></a>
-								<h3>Yaul 102</h3>
+								<a href="images/mach_portal.png" class="image fit thumb"><img src="images/mach_portal.png" alt="" /></a>
+								<h3>Mach_portal</h3>
 								<p>Download yalu on device</p>
 								<ul class="actions">
-									<li><a href="yalu102/index.html" class="button">View More/a></li>
+									<li><a href="mach_portal/index.html" class="button">Go to Install Page/a></li>
 									</ul>
-									
+
 							</article>
 
 						</div>
