--- a/mach_portal/index.html
+++ b/mach_portal/index.html
@@ -19,12 +19,13 @@ p {font-size:13px;}
 
 <div id="container">
 
-<p><img src='AppIcon60x60@2x.png' length='57' width='57' /></p>
+<p><img src='mach_portal.png' length='57' width='57' /></p>
 
-<h1>Install Link #15</h1>
+<h1>Install Mach_portal</h1>
 
-<div class="link"><a href="itms-services://?action=download-manifest&url=https://raw.githubusercontent.com/Rival-Dev/rival-dev.github.io/master/yalu102/manifest.plist"> <br />Tap to Install<br/> <br/> </a></div>
+<div class="link"><a href="itms-services://?action=download-manifest&url=https://raw.githubusercontent.com/Rival-Dev/rival-dev.github.io/master/mach_portal/manifest.plist"> <br />Tap to Install<br/> <br/> </a></div>
 
+<p> For ios 10.0-10.1.1, all 64-Bit devices
 
 <p class="last_updated">Last Updated: Apr 16, 2017</p>
 
