--- a/index.html
+++ b/index.html
@@ -1,9 +1,5 @@
 <!DOCTYPE HTML>
-<!--
-	Strata by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
+
 <html>
 	<head>
 		<title>Rival Dev's Public Repo</title>
@@ -96,7 +92,7 @@
 						<div class="row">
 							<article class="6u 12u$(xsmall) work-item">
 								<a href="images/mach_portal.png" class="image fit thumb"><img src="images/mach_portal.png" alt="" /></a>
-								<h3>Mach_portal</h3>
+								<h3>Mach_Portal</h3>
 								<p>Download yalu on device</p>
 								<ul class="actions">
 									<li><a href="mach_portal/index.html" class="button">Go to Install Page/a></li>
