Removed extra boxes?

--- a/index.html
+++ b/index.html
@@ -95,11 +95,17 @@
 								<h3>Mach_Portal</h3>
 								<p>Download yalu on device</p>
 								<ul class="actions">
-									<li><a href="mach_portal/index.html" class="button">Go to Install Page/a></li>
-									</ul>
-
+									<li><a href="mach_portal/index.html" class="button">Go to Install Page</a></li>
+								</ul>
 							</article>
-
+						<!--
+						</article>
+						<article class="6u 12u$(xsmall) work-item">
+							<a href="images/fulls/01.jpg" class="image fit thumb"><img src="images/thumbs/01.jpg" alt="" /></a>
+							<h3>Add Tweak 8</h3>
+							<p>Tweak 8 description</p>
+						</article>
+					-->
 						</div>
 
 					</section>
